<resources>
    <string name="app_name">HumidityWhatch</string>
    <string name="temperature">Temperatur</string>
    <string name="hum_rel">Rel. Luftfeuchte</string>
    <string name="define_date_range">Define date range:</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="set_a_start_date">Set a start date</string>
    <string name="set_an_end_date">Set an end date</string>
    <string name="Temp_In">Innentemperatur</string>
    <string name="Temp_Out">Außentemperatur</string>
    <string name="TempValue">%1$s °C</string>
    <string name="HumRelValue">%1$s Prozent</string>
    <string name="DateTimeValue">%1$s Uhr</string>
    <string name="in">Innensensor:</string>
    <string name="out">Außensensor:</string>
    <string name="NoValueSelected">Kein Wert ausgewählt</string>
    <string name="Hum_rel_In">Relative Luftfeuchte innen</string>
    <string name="Hum_rel_Out">Relative Luftfeuchte außen</string>
</resources>