<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="8dp"
    >


    <TextView
        android:id="@+id/tv_timestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NoValueSelected"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/tvNameIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/in"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_timestamp" />

    <TextView
        android:id="@+id/tv_value_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="--- °C "
        android:textColor="@android:color/holo_red_dark"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/tv_value_out"
        app:layout_constraintTop_toBottomOf="@+id/tv_timestamp"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/tvNameOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/out"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNameIn" />

    <TextView
        android:id="@+id/tv_value_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="--- °C "
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/tvNameOut"
        app:layout_constraintTop_toBottomOf="@+id/tv_value_in"
        tools:ignore="HardcodedText" />
</androidx.constraintlayout.widget.ConstraintLayout>